--- a/Traineeorganizer/Traineeorganizer/View/AllTasksView.xaml
+++ b/Traineeorganizer/Traineeorganizer/View/AllTasksView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              
              xmlns:Model="clr-namespace:Traineeorganizer.Model"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
@@ -16,28 +17,35 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </UserControl.Resources>
-    
+
     <Grid  DataContext="{Binding altVM}">
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*"/>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <DataGrid  ItemsSource="{Binding Path=AMVDateTable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AutoGenerateColumns="False" SelectedIndex="{Binding DGPsSelectedIndex, Mode=TwoWay}" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" >
+        <DataGrid  ItemsSource="{Binding Path=AMVDateTable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AutoGenerateColumns="False" SelectedIndex="{Binding DGPsSelectedIndex, Mode=TwoWay}"
+                   CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="CellEditEnding">
+                    <i:InvokeCommandAction Command="{Binding ChangeStatusCommand}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+            
             <DataGrid.Columns >
                 <DataGridTextColumn Header="Имя" Binding="{Binding Path=Имя}" Width="*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Тема" Binding="{Binding Path=Тема}"  Width="*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Всего очков" Binding="{Binding Path=Всего очков}"  Width="*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Приоритет" Binding="{Binding Path=Приоритет}"  Width="*" IsReadOnly="True"/>
-                <DataGridCheckBoxColumn Header="Статус" Binding="{Binding Path=Статус}"  Width="*" IsReadOnly="True"/>
+                <DataGridCheckBoxColumn Header="Статус" Binding="{Binding Path=Статус}"  Width="*"/>
             </DataGrid.Columns>
-            
         </DataGrid>
-        
+
         <DataGrid  Grid.Row="1" Grid.RowSpan="2"/>
 
         <Grid Grid.Column="1" Grid.RowSpan="2">
@@ -52,6 +60,7 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
+
             </Grid.RowDefinitions>
             <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Фильтр" VerticalAlignment="Center"/>
 
@@ -63,42 +72,52 @@
                 IsSynchronizedWithCurrentItem="true"
             />
             </StackPanel>
-            
+
             <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Проиритет" VerticalAlignment="Center" Grid.Row="3"/>
 
             <StackPanel Grid.Row="4" HorizontalAlignment="Center"  VerticalAlignment="Center" Orientation="Horizontal">
                 <CheckBox IsChecked="{Binding ChBPr, Mode=OneWayToSource}"/>
-            <ComboBox Name="PriorCB" ItemsSource="{Binding Source={StaticResource PriorityEnum}}"
+                <ComboBox Name="PriorCB" ItemsSource="{Binding Source={StaticResource PriorityEnum}}"
                       SelectedValue="{Binding SelectedPrior, Mode=OneWayToSource}"
                       IsSynchronizedWithCurrentItem="True"
                       />
             </StackPanel>
-            
+
             <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Тема" VerticalAlignment="Center" Grid.Row="5"/>
-            
+
             <StackPanel Grid.Row="6" HorizontalAlignment="Center"  VerticalAlignment="Center" Orientation="Horizontal">
                 <CheckBox  IsChecked="{Binding ChBAc, Mode=TwoWay}"/>
                 <ComboBox Name="ActiveCB" HorizontalAlignment="Center"  VerticalAlignment="Center" Grid.Row="6" SelectedIndex="0"
                           SelectedValue="{Binding SelectedActive, Mode=OneWayToSource}"
                           IsSynchronizedWithCurrentItem="True"
                           >
-                    <ComboBoxItem>Активно</ComboBoxItem> 
+                    <ComboBoxItem>Активно</ComboBoxItem>
                     <ComboBoxItem>Неактивно</ComboBoxItem>
                 </ComboBox>
             </StackPanel>
-            
+
             <Button Content="Поиск" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="8" VerticalAlignment="Center" Width="75" Command="{Binding filterCommand}"/>
             <Button Content="Сбросить" HorizontalAlignment="Right" Margin="0,0,20,0" Grid.Row="8" VerticalAlignment="Center" Width="75" Command="{Binding clearFilterCommand}"/>
 
         </Grid>
+        <Grid Grid.Column="1" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="1" Grid.Row="2" >
-            <Button Content="Добавить" Margin="20" Height="30" Command="{Binding AddTaskCommand}"/>
-            <Button Content="Изменить" Margin="20" Height="30" Command="{Binding EditTaskCommand}"/>
-            <Button Content="Удалить" Margin="20" Height="30" Command="{Binding RemoveTaskCommand}"/>
+            <StackPanel >
+                <Button Content="Добавить" Margin="20" Height="30" Command="{Binding AddTaskCommand}"/>
+                <Button Content="Изменить" Margin="20" Height="30" Command="{Binding EditTaskCommand}"/>
+                <Button Content="Удалить" Margin="20" Height="30" Command="{Binding RemoveTaskCommand}"/>
 
 
-        </StackPanel>
+
+            </StackPanel>
+            <Button Content="Изменть статус задачи" HorizontalAlignment="Center"  Grid.Row="1" 
+                    VerticalAlignment="Center" Width="155" Height="105" Command="{Binding ChangeStatusCommand}"/>
+
+        </Grid>
 
 
 
